		-[Core] InstanceProducers are now allowed to return types that can not be casted to the given service 
		 type. This allows them to be retrieved using the non-generic Container.GetInstance(Type) and is
		 useful for interception scenarios.
		-[Core] Large internal refactoring of the InstanceProducer model. A lot of duplicate code is removed.


Version 1.2.0.11273 (v1.2 RTM) 2011-09-30
	General description:

	Project Changes:
		-The solution and projects are converted to Visual Studio 2010. The library is still compatible with
		 .NET 3.5 though.
		-New SimpleInjector.Extensions.Silverlight project was added (and supporting unit test project).
	
	Code Changes:
		-[Extensions] Performance optimization in the RegisterOpenGeneric en RegisterSingleOpenGeneric 
		 extension methods. Types can now be resolved as quickly as types that are registered using 
		 container.Register<TService, TImplementation>() and container.RegisterSingle<T>(T), which are the
		 fasted type of registrations.
		-[Core] New UnregisteredTypeEventArgs.Register(Expression) method was added to allow improving
		 performance of unregistered type resolution scenarios. (work item 16641).
		-[Extensions] Register(Container, Type) method added to the NonGenericRegistrationsExtensions class
		 to allow registration of concrete transient types.
		-[Core] The Container now registers itself upon creation. This makes some integration scenarios 
		 easier.
		-[Core] A InjectProperties(object) method has been added to the Container. This method enables 
		 injecting public properties to a given type. By adding it to the core library the method can be 
		 optimized for performance and used in integration scenarios without the need for adding the 
		 Extensions.dll.
		-[Core] The 'Handled' property of the UnregisteredTypeEventArgs is made public. This enables some 
		 rare but interesting scenarios were users want to prevent an ActivationException from being thrown 